[package]
name = "backendr"
version = "0.1.0"
authors = ["xleyba <xleyba@users.noreply.github.com>"]
edition = "2018"
publish = false

[dependencies]
actix-web = { version="1.0.0-beta.3" }
actix-http = "0.1.5"
serde = "1.0.90"
serde_derive = "1.0.90"
colored = "1.7"
uuid = { version = "0.7", features = ["serde", "v4"] }
envy = "0.4.0"
log = "0.4.6"
env_logger = "0.6.1"
rusqlite = "0.17.0"
r2d2 = "0.8.4"
r2d2_sqlite = "0.9.0"
serde_json = "1.0.39"
futures = "0.1.26"
serde_rusqlite = "0.18.0"
validator_derive = "0.8.0"
validator = "0.8.0"